--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-top: 25px;">
     <div class="col-sm-3 col-lg-2">
         <img src="/assets/images/headshot.jpg" class="img img-responsive img-circle" />
     </div>
