--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,13 +8,13 @@
         </div>
         <div class="h2" style="color: #804D15;"></div>
         <p class="text text-orange">
-            I'm an historian of science who spends most of his time developing software. Here's what I've been up to lately.
+            I'm a software architect with an historian's mindset Here's what I've been up to lately.
         </p>
 
         <div class="btn-group">
                 <a href="https://github.com/erickpeirson/" class="btn btn-xs"><span class="fa fa-github"></span> erickpeirson</a>
-                <a href="mailto:erick.peirson@asu.edu" class="btn btn-xs"><span class="fa fa-envelope"></span> erick.peirson@asu.edu</a>
-                <a href="https://twitter.com/captbarberousse" class="btn btn-xs"><span class="fa fa-twitter"></span> @captbarberousse</a>
+                <a href="mailto:brp53@cornell.edu" class="btn btn-xs"><span class="fa fa-envelope"></span> brp53@cornell.edu</a>
+                <a href="https://twitter.com/undercaffienatd" class="btn btn-xs"><span class="fa fa-twitter"></span> @undercaffienatd</a>
                 <a href="https://scholar.google.com/citations?user=wVTCvQsAAAAJ&hl=en" class="btn btn-xs"><span class="fa fa-google"></span> Google Scholar</a>
                 <a href="http://orcid.org/0000-0002-0564-9939" class="btn btn-xs"><span class="fa fa-anchor"></span> orcid.org/0000-0002-0564-9939</a>
         </div>
