--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         <div class="btn-group">
                 <a href="https://github.com/erickpeirson/" class="btn btn-xs"><span class="fa fa-github"></span> erickpeirson</a>
                 <a href="mailto:brp53@cornell.edu" class="btn btn-xs"><span class="fa fa-envelope"></span> brp53@cornell.edu</a>
-                <a href="https://twitter.com/undercaffienatd" class="btn btn-xs"><span class="fa fa-twitter"></span> @undercaffienatd</a>
+                <a href="https://twitter.com/undercaffeinatd" class="btn btn-xs"><span class="fa fa-twitter"></span> @undercaffeinatd</a>
                 <a href="https://scholar.google.com/citations?user=wVTCvQsAAAAJ&hl=en" class="btn btn-xs"><span class="fa fa-google"></span> Google Scholar</a>
                 <a href="http://orcid.org/0000-0002-0564-9939" class="btn btn-xs"><span class="fa fa-anchor"></span> orcid.org/0000-0002-0564-9939</a>
         </div>
