--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,11 +4,13 @@
     </div>
     <div class="col-sm-9 col-lg-10">
         <div class="h1">Erick Peirson
-            <span class="small">Developing Computational Humanities</span>
+            <span class="small">Systems Architect & Research Technologist</span>
         </div>
         <div class="h2" style="color: #804D15;"></div>
         <p class="text text-orange">
-            I'm a software architect with an historian's mindset Here's what I've been up to lately.
+            I apply my advanced training and research in complexity science, biology, history, 
+            and philosophy to the design and analysis of distributed software systems from a
+            socio-technical perspective. 
         </p>
 
         <div class="btn-group">
