--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <img src="/assets/images/headshot.jpg" class="img img-responsive img-circle" />
     </div>
     <div class="col-sm-9 col-lg-10">
-        <div class="h1">Erick Peirson
+        <div class="h1">Erick Peirson, Ph.D.
             <span class="small">Systems Architect & Research Technologist</span>
         </div>
         <div class="h2" style="color: #804D15;"></div>
